syntax = "proto3";

package mining;

option go_package = "github.com/xyplex2/redteamcoin/proto";

// Mining service for pool communication
service MiningPool {
  // Register a new miner
  rpc RegisterMiner(MinerInfo) returns (RegistrationResponse);

  // Get mining work from pool
  rpc GetWork(WorkRequest) returns (WorkResponse);

  // Submit mined block
  rpc SubmitWork(WorkSubmission) returns (SubmissionResponse);

  // Heartbeat to keep miner active
  rpc Heartbeat(MinerStatus) returns (HeartbeatResponse);

  // Stop mining
  rpc StopMining(MinerInfo) returns (StopResponse);
}

// Miner information
message MinerInfo {
  string miner_id = 1;
  string ip_address = 2;
  string hostname = 3;
  int64 timestamp = 4;
}

// Registration response
message RegistrationResponse {
  bool success = 1;
  string message = 2;
  string miner_id = 3;
}

// Work request
message WorkRequest {
  string miner_id = 1;
}

// Work response containing block to mine
message WorkResponse {
  int64 block_index = 1;
  string previous_hash = 2;
  string data = 3;
  int32 difficulty = 4;
  int64 timestamp = 5;
}

// Work submission
message WorkSubmission {
  string miner_id = 1;
  int64 block_index = 2;
  int64 nonce = 3;
  string hash = 4;
}

// Submission response
message SubmissionResponse {
  bool accepted = 1;
  string message = 2;
  int64 reward = 3;
}

// GPU device information
message GPUDevice {
  int32 id = 1;
  string name = 2;
  string type = 3; // "CUDA" or "OpenCL"
  uint64 memory = 4;
  int32 compute_units = 5;
  bool available = 6;
}

// Miner status
message MinerStatus {
  string miner_id = 1;
  int64 hash_rate = 2;
  int64 blocks_mined = 3;
  double cpu_usage_percent = 4;
  int64 total_hashes = 5;
  int64 mining_time_seconds = 6;
  repeated GPUDevice gpu_devices = 7;
  int64 gpu_hash_rate = 8;
  bool gpu_enabled = 9;
  bool hybrid_mode = 10;
}

// Heartbeat response
message HeartbeatResponse {
  bool active = 1;
  string message = 2;
}

// Stop response
message StopResponse {
  bool success = 1;
  string message = 2;
  int64 total_blocks_mined = 3;
}
